--- a/package.json
+++ b/package.json
@@ -127,6 +127,8 @@
   },
   "packageManager": "pnpm@10.23.0",
   "dependencies": {
+    "@ai-sdk/openai": "^3.0.9",
+    "@ai-sdk/openai-compatible": "^2.0.7",
     "@buape/carbon": "0.0.0-beta-20260110172854",
     "@clack/prompts": "^0.11.0",
     "@grammyjs/runner": "^2.0.3",
@@ -143,6 +145,7 @@
     "@slack/bolt": "^4.6.0",
     "@slack/web-api": "^7.13.0",
     "@whiskeysockets/baileys": "7.0.0-rc.9",
+    "ai": "^6.0.30",
     "ajv": "^8.17.1",
     "body-parser": "^2.2.2",
     "chalk": "^5.6.2",
